# hr-analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_DOCUMENTATION.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  20260224_add_daily_minutes_columns.py  20260226_move_bronze_to_schema.py  initial_one.py
dashboard/: visualize.py
dashboard/output/: attendance_discipline.html  attendance_heatmap.html  work_hours_overtime.html  workforce_trend.html
docs/: README.md
notebooks/: 01_eda.ipynb
notebooks/.ipynb_checkpoints/: 01_eda-checkpoint.ipynb
src/app/: config.py  database.py  main.py
src/app/api/: analytics.py  auth.py  employee.py  timesheet.py
src/app/core/: config.py  exceptions.py  logging_config.py  roles.py  security.py  user_store.py
src/app/schemas/: analytics_schema.py  auth_schema.py  employee_schema.py  response_schema.py  timesheet_schema.py
src/app/services/: analytics_service.py  employee_service.py  timesheet_service.py
src/db/models/: bronze.py  gold.py  silver.py
src/etl/: extract_minio.py  run.py  upload_to_minio.py
src/etl/bronze/: extract.py  loader.py  tasks.py
src/etl/gold/: loader.py  tasks.py  transform.py
src/etl/gold/metrics/: kpis.sql
src/etl/quality/: checks.py  report.py  tasks.py
src/etl/silver/: __init__.py  loader.py  tasks.py  transform.py
